@@ -2,8 +2,10 @@ export CC=gcc
 export CFLAGS=-ffreestanding -no-pie -fno-pic -std=gnu11 -mno-red-zone -Wall -I${PWD}/include -mcmodel=kernel -fno-stack-protector
 export LD=ld
 export LDFLAGS=
-KERN64_OBJ=init/main.o drivers/text.o
-.PHONY: all clean filesys boot init bochs qemu drivers
+KERN64_OBJ=init/main.o \
+					 drivers/text.o \
+					 kernel/memory.o kernel/bitmap.o
+.PHONY: all clean filesys boot init bochs qemu drivers kernel
 all: hdd.img kernel64.elf
 	@echo "========================================================"
 	@echo "Please enter \"sudo make filesys\" to complete the image"
@@ -14,6 +16,8 @@ init:
 	make -C init/ all
 drivers:
 	make -C drivers/ all
+kernel:
+	make -C kernel/ all
 filesys: hdd.img kernel64.elf
 	losetup -o 16384 /dev/loop3 hdd.img
 	mkfs.ext2 /dev/loop3
@@ -24,7 +28,7 @@ filesys: hdd.img kernel64.elf
 	umount mnt/
 	rmdir mnt/
 	losetup -d /dev/loop3
-kernel64.elf: init drivers
+kernel64.elf: init drivers kernel
 	${LD} ${LDFLAGS} -Tkernel/kernel64.ld -m elf_x86_64 ${KERN64_OBJ} -o $@
 hdd.img: boot
 	dd if=/dev/zero of=$@ bs=512 count=122880
@@ -36,6 +40,7 @@ clean:
 	make -C boot/ clean
 	make -C init/ clean
 	make -C drivers/ clean
+	make -C kernel/ clean
 bochs:
 	make -C vmtest/ bochs
 qemu:
