@@ -1,0 +1,3 @@
+#ifndef BITMAP_H_
+#define BITMAP_H_
+#endif // BITMAP_H_
