@@ -1,0 +1,4 @@
+#ifndef MEMORY_H_
+#define MEMORY_H_
+void initRam(void);
+#endif // MEMORY_H_
